@@ -9,12 +9,13 @@ import java.awt.event.ComponentEvent;
 import java.awt.geom.Point2D;
 import java.awt.geom.RoundRectangle2D;
 
-import edu.colorado.phet.common.phetcommon.simsharing.Parameter;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.ParameterSet;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.common.piccolophet.simsharing.SimSharingDragSequenceEventHandler2;
+import edu.colorado.phet.common.spline.ParametricFunction2D;
 import edu.colorado.phet.energyskatepark.EnergySkateParkResources;
 import edu.colorado.phet.energyskatepark.model.EnergySkateParkSpline;
 import edu.colorado.phet.energyskatepark.model.PreFabSplines;
@@ -25,7 +26,9 @@ import edu.umd.cs.piccolo.nodes.PPath;
 import edu.umd.cs.piccolo.nodes.PText;
 import edu.umd.cs.piccolo.util.PBounds;
 
+import static edu.colorado.phet.common.phetcommon.simsharing.Parameter.param;
 import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.ParameterKeys.numTracks;
+import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.ParameterKeys.track;
 import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.UserComponents.toolboxTrack;
 
 /**
@@ -64,8 +67,14 @@ public class SplineToolboxNode extends PNode {
         draggableIcon.addInputEventListener( new SimSharingDragSequenceEventHandler2( toolboxTrack ) {
 
             //Indicate how many tracks the user has created, including this one
-            @Override public Parameter[] getStartDragParameters() {
-                return new Parameter[] { new Parameter( numTracks, energySkateParkSimulationPanel.getEnergySkateParkModel().getNumSplines() + 1 ) };
+            @Override public ParameterSet getStartDragParameters() {
+
+                //Use the class count to get the new track ID, assumes nothing else will happen between now and then to change that index
+                return super.getStartDragParameters().param( numTracks, energySkateParkSimulationPanel.getEnergySkateParkModel().getNumSplines() + 1 ).param( track, ParametricFunction2D.count );
+            }
+
+            @Override public ParameterSet getEndDragParameters() {
+                return super.getEndDragParameters().addAll( param( track, createdSurface.getParametricFunction2D().index ) );
             }
 
             @Override protected void startDrag( PInputEvent event ) {
